Add a description, steps and ingredients list

--- a/recipes/airfryerpotatowedges.html
+++ b/recipes/airfryerpotatowedges.html
@@ -8,5 +8,27 @@
     <body>
         <h1>Air Fryer Potato Wedges</h1>
         <a href="../index.html">Home</a>
+        <img src="https://www.allrecipes.com/thmb/z0sc_N7QmxpshqUsHoi1I85aDIQ=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/266826-air-fryer-potato-wedges-DDMFS-4x3-62eba5348c6543a6ab09cbdbf65a6c71.jpg">
+        <h1>Description</h1>
+        <p>Deliciously crispy air-fried potato wedges are perfectly seasoned and ready to serve in just over 30 minutes. It doesn't get any easier than this! Serve with ketchup for a tasty appetizer, or toss with some grated Parmesan for a cheesy potato side dish.</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>2 medium russet potatoes</li>
+            <li>1 ½ tablespoons olive oil</li>
+            <li>½ teaspoon ground paprika</li>
+            <li>½ teaspoon parsley flakes</li>
+            <li>½ teaspoon chili powder</li>
+            <li>½ teaspoon sea salt</li>
+            <li>⅛ teaspoon ground black pepper</li>
+        </ul>
+        <h1>Steps</h1>
+        <ol>
+            <li>Gather the ingredients. Preheat an air fryer to 400 degrees F (200 degrees C).</li>
+            <li>Cut each potato in half lengthwise. Cut each half in half lengthwise, and then cut each quarter in half lengthwise. You will have 16 wedges. Gather the seasonings.</li>
+            <li>Place potato wedges in a large bowl. Add olive oil, paprika, parsley, chili, salt, and pepper; mix until well combined.</li>
+            <li>Place 1/2 of the potato wedges in the basket of the air fryer and cook for 10 minutes.</li>
+            <li>Flip wedges with tongs and cook for an additional 5 minutes. Remove to a plate. Repeat to cook the remaining wedges.</li>
+            <li>Serve hot and enjoy!</li>
+        </ol>
     </body>
 </html>
