Add generaltsoschicken.html link

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="recipes/airfryerpotatowedges.html">Air Fryer Potato Wedges</a>
+        <a href="recipes/generaltsoschicken.html">General Tso's Chicken</a>
     </body>
 </html>
