Add recipe info

--- a/recipes/generaltsoschicken.html
+++ b/recipes/generaltsoschicken.html
@@ -7,6 +7,47 @@
 
     <body>
         <h1>General Tso's Chicken</h1>
+        <img src="https://www.allrecipes.com/thmb/uJOb9S4n4aTvRrBXxdTejuiz1c8=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/91499-GeneralTsaosChickenII-2X3-0726-11684f5673c448e4902ede18abab2abd.jpg">
+        <h1>Description</h1>
+        <p>General Tso's chicken is crispy, twice-fried breaded chicken pieces in a deliciously sweet and sticky glaze. This mouthwatering dish delivers a combination of Asian flavors that will knock your chopsticks off! Serve with steamed broccoli and white rice and garnish with sliced green onions.</p>
+        <h1>Ingredients</h1>
+        <h2>Chicken</h2>
+        <ul>
+            <li>4 cups vegetable oil for frying</li>
+            <li>1 large egg</li>
+            <li>1 ½ pounds skinless, boneless chicken thighs, cut into 1 ½-inch pieces</li>
+            <li>1 teaspoon salt</li>
+            <li>1 teaspoon white sugar</li>
+            <li>1 pinch white pepper</li>
+            <li>1 cup cornstarch</li>
+        </ul>
+        <h2>Sauce</h2>
+        <ul>
+            <li>2 tablespoons vegetable oil</li>
+            <li>3 tablespoons chopped green onion</li>
+            <li>1 clove garlic, minced</li>
+            <li>6 dried whole red chilies</li>
+            <li>1 strip orange zest</li>
+            <li>½ cup white sugar</li>
+            <li>¼ cup soy sauce</li>
+            <li>3 tablespoons chicken broth</li>
+            <li>2 tablespoons peanut oil</li>
+            <li>1 tablespoon rice vinegar</li>
+            <li>2 teaspoons sesame oil</li>
+            <li>¼ teaspoon ground ginger</li>
+            <li>2 teaspoons cornstarch</li>
+            <li>¼ cup water</li>
+        </ul>
+        <h1>Steps</h1>
+        <ol>
+            <li>Heat vegetable oil in a deep fryer or large saucepan to 375 degrees F (190 degrees C).</li>
+            <li>Whisk egg in large mixing bowl. Add chicken, salt, sugar, and pepper; mix well. Mix in cornstarch, a little bit at a time, until chicken is well coated.</li>
+            <li>Working in batches, carefully drop one piece of chicken at a time into the hot oil. Fry until chicken turns golden brown and begins to float, about 3 minutes. Remove chicken to a plate and allow to cool as you fry the next batch.</li>
+            <li>Once all of the chicken has been fried, refry the chicken, starting with the batch that was cooked first. Fry each batch until chicken turns deep golden brown, about 2 minutes more. Drain on a paper towel-lined plate.</li>
+            <li>To make the sauce: Heat vegetable oil in a wok or large skillet over high heat. Stir in green onion, garlic, whole chiles, and orange zest. Cook and stir until garlic turns golden and chiles brighten, 1 to 2 minutes.</li>
+            <li>Add sugar, soy sauce, chicken broth, peanut oil, rice vinegar, sesame oil, and ginger; bring to a boil and cook for 3 minutes. Whisk 2 teaspoons of cornstarch in water until dissolved. Stir into the boiling sauce. Return to a boil and cook until the sauce thickens and is no longer cloudy from the cornstarch, about 1 minute.</li>
+            <li>Stir chicken into the boiling sauce. Reduce heat to low and cook until chicken is heated through and has absorbed some of the sauce, about 3 minutes.</li>
+        </ol>
 
         <a href="../index.html">Home</a>
     </body>
