Add link to index.html

--- a/recipes/tiramisu.html
+++ b/recipes/tiramisu.html
@@ -37,5 +37,6 @@
             <li>Cover and refrigerate until set, 4 to 6 hours.</li>
             <li>Enjoy!</li>
         </ol>
+        <a href="../index.html">Home</a>
     </body>
 </html>
